# comfyui_gr85

./: .gitignore  README.md  __init__.py  latent.py  logging.py  prompt.py  pyproject.toml  requirements.txt
js/: FluxAttentionSeeker2.js  showText.js
nodes/florence2/: florence2_to_coordinates.py  mask_batch_to_segs.py  nodes.py
nodes/latent/: image_dimension_resizer.py  image_sizer.py  image_sizer_all.py  random_ratio.py
nodes/logging/: show_text.py
nodes/mask/: batch_rect_mask_generator.py  filter_and_combine_masks.py  island_mask_generator.py  mask_connect_mst.py  mask_splitter.py  paste_by_mask_gr85.py  randomized_mask_transform.py
nodes/prompt/: contains_word.py  element_concatenator.py  flux_attention_seeker_2.py  flux_attention_seeker_3.py  flux_attention_seeker_generator.py  generate_default_clip_values.py  insert_character.py  int_to_string.py  integer_sequence_modifier.py  json_file_reader.py  json_file_saver.py  llm_enhance.py  seed_based_output_selector.py  simple_wildcard_picker.py  string_list_selector.py  tag_injector.py  tag_injector_large.py  update_clip_blocks.py  vertical_wildcard_picker.py
nodes/prompt_selection/: seed_based_output_selector.py
nodes/prompt_tags/: tag_injector.py  tag_injector_large.py
nodes/random_numbers/: random_float.py  random_int.py
nodes/random_seed/: next_seed.py
nodes/resolution/: image_dimension_resizer.py  image_sizer.py  image_sizer_all.py  random_ratio.py
nodes/sizes/: image_dimension_resizer.py  image_sizer.py  random_ratio.py
nodes/utils/: flux_model_merge_parameters.py  (+6 more)
wildcards/: elements.yaml
(+5 files in other folders)
